--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ NLPModelsModifiers = "e01155f1-5c6f-4375-a9d8-616dd036575f"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 SolverCore = "ff4d7338-4cf1-434d-91df-b86cb86fb843"
 SolverTools = "b5612192-2639-5dc1-abfe-fbedd65fab29"
+TSVD = "9449cd9e-2762-5aa3-a617-5413e99d722e"
 
 [compat]
 Krylov = "0.9.1"
@@ -20,6 +21,7 @@ NLPModels = "0.21"
 NLPModelsModifiers = "0.7"
 SolverCore = "0.3"
 SolverTools = "0.9"
+TSVD = "0.4"
 julia = "1.6"
 
 [extras]
